--- a/Neural.Level/DeepNetwork.MNIST/DeepNetwork.MNIST/DeepNetwork.MNIST.csproj
+++ b/Neural.Level/DeepNetwork.MNIST/DeepNetwork.MNIST/DeepNetwork.MNIST.csproj
@@ -5,4 +5,9 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="ILGPU" Version="0.2.1" />
+    <PackageReference Include="VI.Neural" Version="1.0.0" />
+  </ItemGroup>
+
 </Project>
